--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>    
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://listblog.github.io/landxlandscapeconstruction.BBQ-Island-Patio-Cover-Backyard-Remodel-in-Upland/">https://listblog.github.io/landxlandscapeconstruction.BBQ-Island-Patio-Cover-Backyard-Remodel-in-Upland/</a><br>    
+                <a target="_bLank" href="https://landxlandscapeconstruction.s3.us-east-005.backblazeb2.com/BBQ+Island+%26+Patio+Cover+Backyard+Remodel+in+Upland/index.html">https://landxlandscapeconstruction.s3.us-east-005.backblazeb2.com/BBQ+Island+%26+Patio+Cover+Backyard+Remodel+in+Upland/index.html</a><br>
+                <a target="_bLank" href="https://landxlandscapeconstruction-git-e95ff2-birchs-projects-9248c938.vercel.app/">https://landxlandscapeconstruction-git-e95ff2-birchs-projects-9248c938.vercel.app/</a><br>
+                <a target="_bLank" href="https://aquamarine-frangipane-9ba4e5.netlify.app/">https://aquamarine-frangipane-9ba4e5.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
